// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Container snapshot (wide) 1`] = `
<div
  className="sc-bdVaJa cAUiFA"
>
  Some content
</div>
`;

exports[`components/Container snapshot 1`] = `
<div
  className="sc-bdVaJa ipwjvv"
>
  Some content
</div>
`;
